--- a/resources/css/partials/_categories.scss
+++ b/resources/css/partials/_categories.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
+    padding-left: 0;
     //grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
 
     > * {
@@ -63,5 +64,14 @@
 @media (max-width: 650px) {
     .next-post__title {
         display: none;
+    }
+}
+
+@media (max-width: 550px) {
+    .cat-posts {
+        padding-top: 2rem;
+        .post__title {
+            width: 85vw;
+        }
     }
 }
