--- a/resources/css/partials/_home.scss
+++ b/resources/css/partials/_home.scss
@@ -58,3 +58,12 @@
         display: none;
     }
 }
+
+@media (max-width: 550px) {
+    .home-posts {
+        padding-top: 2rem;
+        .post__title {
+            width: 85vw;
+        }
+    }
+}
