--- a/resources/css/site.scss
+++ b/resources/css/site.scss
@@ -1,7 +1,9 @@
 @import "partials/reset";
+@import "partials/nav";
 @import "partials/home";
 @import "partials/about";
 @import "partials/categories";
+@import "partials/single";
 
 body {
     font-family: 'Work Sans', sans-serif;
@@ -10,100 +12,4 @@ body {
 
 a {
     text-decoration: none;
-}
-
-.site-nav {
-    position: absolute;
-    top: 0;
-    right: 0;
-
-    ul {
-        list-style: none;
-        display: flex;
-        justify-content: flex-end;
-        padding-top: 1rem;
-        padding-right: 2rem;
-
-        a {
-            display: block;
-            padding: .8rem 1rem;
-            text-decoration: none;
-            font-size: 1.1rem;
-            color: darkslategray;
-            &:hover {
-                text-decoration: underline;
-            }
-        }
-    }
-}
-
-
-.single-post {
-    //padding: 1rem 3rem;
-    font-size: 1.4rem;
-}
-
-.post-title {
-    margin-bottom: 2rem;
-}
-
-.post-image {
-    width: 100vw;
-    aspect-ratio: 16/6;
-    overflow: hidden;
-    margin-bottom: -8rem;
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-}
-
-@media (max-width: 1400px) {
-    .post-image {
-        aspect-ratio: 16/8
-    }
-}
-
-.post-content {
-    padding: 3rem 1.4rem;
-    max-width: 70vw;
-    margin: auto;
-    margin-top: 8rem;
-}
-
-@media (max-width: 800px) {
-    .post-content {
-        max-width: 95vw;
-        padding-left: 1rem;
-        padding-right: 1rem;
-    }
-}
-
-.next-post {
-    position: fixed;
-    bottom: 1.5rem;
-    right: 1rem;
-    max-width: 70vw;
-    margin: auto;
-    font-size: 1rem;
-    text-align: right;
-    //padding-top: 1rem;
-    //padding-bottom: 3rem;
-    a {
-        padding: .8rem 1rem;
-        background: rgba(0,0,0,0.0);
-        color: rgba(0,0,0,0.4);
-        transition: .3s all;
-        &:hover {
-            background: rgba(0,0,0,0.7);
-            color: white
-        }
-    }
-}
-
-.post-content blockquote {
-    padding-left: 2rem;
-    font-style: italic;
-    border-left: 5px solid gray;
 }
